<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="my_representatives_find">FIND MY REPRESENTATIVES</string>
    <string name="elections_upcoming">UPCOMING ELECTIONS</string>
    <string name="intro">Voting</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="representative_search_header">Representative Search</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="address_line_1">Address line 1 </string>
    <string name="address_line_2">Address line 2 </string>
    <string name="city">City </string>
    <string name="zip">Zip </string>
    <string name="location_btn">USE MY LOCATION</string>
    <string name="locations">Voting Locations</string>
    <string name="ballot">Ballot Information</string>
    <string name="address">Address</string>
    <string name="find_btn">FIND MY REPRESENTATIVES</string>
    <string name="representatives">My Representatives</string>
    <string name="election_info">Election Information</string>
    <string name="corr_address">Correspondence Address</string>
    <string name="follow">Follow Election</string>
    <string name="website">Website</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="avatar">Avatar</string>
    <string name="unfollow_button">unfollow election</string>
    <string name="follow_button">follow election</string>
    <string name="error_permission">To get representatives by using location, you need to enable location permission</string>
    <string name="tools_name">President of the US</string>
    <string name="tools_official_name">Mike</string>
    <string name="tools_party_name">Party</string>
    <string name="tools_election_name">Election Name</string>
    <string name="tools_date">Wed Mar 20 01:01:01 PDT 2099</string>
    <string name="tools_election_date">23 January 2999</string>
</resources>
