<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16">

        <ImageView
            android:id="@+id/avatarIV"
            android:layout_width="@dimen/dimen_64"
            android:layout_height="@dimen/dimen_64"
            android:layout_margin="@dimen/dimen_4"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_4"
            android:text="@{representative.office.name}"
            android:textSize="@dimen/dimen_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatarIV"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_name" />

        <TextView
            android:id="@+id/officialNameTV"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_4"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@id/webIV"
            app:layout_constraintStart_toEndOf="@id/avatarIV"
            app:layout_constraintTop_toBottomOf="@id/nameTV"
            tools:text="@string/tools_official_name" />

        <TextView
            android:id="@+id/partyNameTV"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_4"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/webIV"
            app:layout_constraintStart_toEndOf="@id/avatarIV"
            app:layout_constraintTop_toBottomOf="@id/officialNameTV"
            tools:text="@string/tools_party_name" />

        <ImageView
            android:id="@+id/webIV"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_4"
            android:contentDescription="@string/website"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fbIV"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/web" />

        <ImageView
            android:id="@+id/fbIV"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_4"
            android:contentDescription="@string/fb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitterIV"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/twitterIV"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_4"
            android:contentDescription="@string/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>