<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/representative_motion_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/my_representatives"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/representative_search_header"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/address1ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.completeAddress.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTV" />

            <EditText
                android:id="@+id/address2ET"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.completeAddress.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address1ET" />

            <EditText
                android:id="@+id/cityET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.completeAddress.city}"
                app:layout_constraintEnd_toStartOf="@id/stateET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address2ET" />

            <Spinner
                android:id="@+id/stateET"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/cityET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cityET"
                app:layout_constraintTop_toTopOf="@id/cityET"
                app:newValue="@{representativeViewModel.completeAddress.state}" />


            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{representativeViewModel.completeAddress.zip}"
                app:layout_constraintEnd_toEndOf="@id/cityET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityET" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/my_representatives_find"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="32dp"
                app:layout_constraintTop_toBottomOf="@+id/zip" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/locationButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/location_btn"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myRepLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <TextView
                android:id="@+id/repTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/representatives"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/repRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repTitleTV"
                app:representativeList="@{representativeViewModel.representativesList}" />

            <TextView
                android:id="@+id/apiStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:APIStatusTV="@{representativeViewModel.representativeVMAPIStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repTitleTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>