<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="election"
            type="com.example.android.politicalpreparedness.network.models.Election" />

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/electionToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/electionDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:fontFamily="@font/open_sans"
            app:setElectionDay="@{voterInfoViewModel.election.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/electionToolbar"
            tools:text="23 January 2999" />

        <TextView
            android:id="@+id/infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/election_info"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/electionDateTV"
            app:layout_constraintTop_toBottomOf="@id/electionDateTV" />

        <TextView
            android:id="@+id/locationsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.votingLocationFinderUrl)}"
            android:text="@string/locations"
            app:layout_constraintStart_toStartOf="@id/electionDateTV"
            app:layout_constraintTop_toBottomOf="@id/infoTV" />

        <TextView
            android:id="@+id/ballotTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.ballotInfoUrl)}"
            android:text="@string/ballot"
            app:layout_constraintStart_toStartOf="@id/electionDateTV"
            app:layout_constraintTop_toBottomOf="@id/locationsTV" />


        <ImageView
            android:id="@+id/apiStatusIV"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:civicsAPIStatus="@{voterInfoViewModel.civicAPIStatus}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/followButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:enabled="@{voterInfoViewModel.election != null}"
            android:fontFamily="@font/open_sans"
            android:onClick="@{() -> voterInfoViewModel.toggleFollowOrUnfollowElection()}"
            android:text="@string/follow"
            android:textColor="@color/white"
            app:cornerRadius="32dp"
            app:undoFollowElection="@{voterInfoViewModel.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>